--- a/Bonobo.Git.Server/web.config
+++ b/Bonobo.Git.Server/web.config
@@ -49,12 +49,13 @@
   -->
   <system.web>
     <globalization enableClientBasedCulture="true" uiCulture="auto"/>
-    <customErrors mode="On" defaultRedirect="Home/Error"/>
+    <customErrors mode="Off" defaultRedirect="Home/Error"/>
     <httpRuntime maxRequestLength="102400"/>
     <authentication mode="None"/>
     <compilation debug="true" targetFramework="4.8"/>
   </system.web>
   <system.webServer>
+	  <httpErrors errorMode="Detailed" />
     <modules runAllManagedModulesForAllRequests="true">
       <remove name="RoleManager"/>
     </modules>
