--- a/Bonobo.Git.Server/Bonobo.Git.Server.csproj
+++ b/Bonobo.Git.Server/Bonobo.Git.Server.csproj
@@ -555,6 +555,7 @@
     <Content Include="Content\components\font-awesome\fonts\FontAwesome.otf" />
     <Content Include="Content\components\highlight\styles\github.css" />
     <Content Include="Content\components\pure\pure-min.css" />
+    <Content Include="Content\dropdown.css" />
     <Content Include="Content\fonts.css" />
     <Content Include="Content\fonts\opensans-bold.svg" />
     <Content Include="Content\fonts\opensans-light.svg" />
