Add search service account view, start reports dropdown

--- a/Bonobo.Git.Server/Bonobo.Git.Server.csproj
+++ b/Bonobo.Git.Server/Bonobo.Git.Server.csproj
@@ -655,6 +655,7 @@
     <Content Include="Views\Repository\_Tag.cshtml" />
     <Content Include="Views\_ViewImports.cshtml" />
     <Content Include="Views\Repository\Buttons.cshtml" />
+    <Content Include="Views\Repository\SearchServiceAccounts.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
