--- a/Bonobo.Git.Server/packages.config
+++ b/Bonobo.Git.Server/packages.config
@@ -6,6 +6,7 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="DotNetZip" version="1.10.1" targetFramework="net46" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="FluentValidation" version="11.5.2" targetFramework="net48" />
   <package id="LibGit2Sharp" version="0.23.1" targetFramework="net46" />
   <package id="LibGit2Sharp.NativeBinaries" version="1.0.164" targetFramework="net46" />
   <package id="MediaTypeMap" version="2.1.0.0" targetFramework="net45" />
