--- a/Bonobo.Git.Server/packages.config
+++ b/Bonobo.Git.Server/packages.config
@@ -28,6 +28,7 @@
   <package id="MvcCheckBoxList" version="1.4.5" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="Semver" version="2.3.0" targetFramework="net48" />
   <package id="Serilog" version="2.4.0" targetFramework="net46" />
   <package id="Serilog.Settings.AppSettings" version="2.1.0" targetFramework="net46" />
   <package id="Serilog.Sinks.File" version="3.2.0" targetFramework="net46" />
